--- a/views/page-pf/contact.html.twig
+++ b/views/page-pf/contact.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
     {% block header %}
-    	{% include "/nav-bar/nav-bar.html.twig" with {'active' : 'accueil'} %}
+    	{% include "/nav-bar/nav-bar.html.twig" with {'active' : '/contact'} %}
     {% endblock %}
 
     {% block main %}
