--- a/views/page-pf/cv.html.twig
+++ b/views/page-pf/cv.html.twig
@@ -54,17 +54,18 @@
                 </header>
                 <article class="article-profil">
                     <p class="text-nom2 text-dark"><b>PROFIL</b></p>
-                    <p class="p-cv2 mb-1">À la recherche d'une alternance,</p>
-                    <p class="p-cv2 mb-1">Autonome de nature, je peux travailler seul ou en groupe, étant également capable de m’adapter à un environnement que je ne connais pas.</p> 
-                    <p class="p-cv2 mb-1">Je suis quelqu'un de très déterminé même quand je ne comprends pas, je ne lâche pas jusqu'à comprendre.</p>
-                    <p class="p-cv2 mb-1">Ce métier me plaît beaucoup et j'aimerais trouver une entreprise susceptible de m'accueillir pour mon évolution</p>
-                    <p class="p-cv2 mb-1">dans le domaine du développement d'application web afin de me perfectionner et obtenir mon diplôme.<p>
+                    <p class="p-cv2 mb-1">Afin de poursuivre ma formation Concepteur, de développeur d’applications,</p>
+                    <p class="p-cv2 mb-1">je suis à la recherche d’une entreprise pour effectuer la prochaine année alternance et obtenir mon diplôme.</p> 
+                    <p class="p-cv2 mb-1">Je suis méticuleux et passionné par le domaine du développement informatique.</p>
+                    <p class="p-cv2 mb-1">Ma capacité d’auto-formation fait de moi quelqu’un de déterminé et je serai</p>
+                    <p class="p-cv2 mb-1">ravi de mettre ces compétences au service de ma futur entreprise d’accueil.</p>
+
                 </article>                
 
                 <article class="article-profil">
                     <p class="text-nom2 text-dark"><b>COMPETENCES</b></p>
-                    <p class="p-cv2 mb-1"><span class="span-orange"><b>Formation-dev:</b></span> HTML, Twig, CSS, Bootstrap, Responsive, Javascrip, TypeScript, MySQL, PHP, MongoBD, Ubuntu,</p>
-                    <p class="p-cv2 mb-1">Figma pour mise en page et maquette fonctionnelle.</p>
+                    <p class="p-cv2 mb-1"><span class="span-orange"><b>Formation-dev:</b></span> HTML, Twig, CSS, Bootstrap, Responsive, Javascrip, Node.JS, React, TypeScript, MySQL, PHP,</p>
+                    <p class="p-cv2 mb-1">MongoBD, Ubuntu, Server ssh, Figma pour mise en page et maquette fonctionnelle.</p>
                     <p class="p-cv2 mb-1"><span class="span-orange"><b>Télécom:</b></span> Tireur de câbles, préparateur de commandes, utilisation de logiciel de stockage.</p>
                     <p class="p-cv2 mb-1"><span class="span-orange"><b>En autodidacte:</b></span> Montage, démontage, diagnostic, réparation PC, installation système, drivers et programmes.</p>
                     <p class="p-cv2 mb-1"><span class="span-orange"><b>Cariste:</b></span> Préparations de commandes. Réceptions, contrôles, conditionnement, rangement, chargement de marchandise.</p>
@@ -72,33 +73,33 @@
                 <article class="article-profil">
                     <p class="text-nom2 text-dark"><b>EXPERIENCES PROFESSIONNELLES</b></p>
                     
-                    <p class="p-cv2 mb-1"><b> 2021 /2022: </b> <span class="span-orange"><b> ECOLE RI7 </b></span></p>
+                    <p class="p-cv2 mb-1"><b id="b-cv"> 2021 /2022: </b> <span class="span-orange"><b> ECOLE RI7 </b></span></p>
                     <p class="p-cv2 mb-4">En formation pour devenir développeur d'application web.</p>
 
-                    <p class="p-cv2 mb-1"><b> 2019 /2020: </b> <span class="span-orange"><b> SERFIM.TIC </b></span></p>
+                    <p class="p-cv2 mb-1"><b id="b-cv"> 2019 /2020: </b> <span class="span-orange"><b> SERFIM.TIC </b></span></p>
                     <p class="p-cv2 mb-4">Repérage des chambres, balisage, tirage de fibres optiques.</p>
 
-                    <p class="p-cv2 mb-1"><b> 2017 /2019: </b> <span class="span-orange"><b> ERT TECHNOLOGIE ET CIRCET </b></span></p>
+                    <p class="p-cv2 mb-1"><b id="b-cv"> 2017 /2019: </b> <span class="span-orange"><b> ERT TECHNOLOGIE ET CIRCET </b></span></p>
                     <p class="p-cv2 mb-1">Préparateur de commandes en Telecom, réceptions et contrôles de marchandise, Chargements et déchargements pour technicien.</p>
                     <p class="p-cv2 mb-4">Utilisation de logiciels de stockage( Osiris ).</p>
 
-                    <p class="p-cv2 mb-1"><b> 2016 /2017: </b> <span class="span-orange"><b> SERPOLLET (devenu SERFIM.TIC) </b></span></p>
+                    <p class="p-cv2 mb-1"><b id="b-cv"> 2016 /2017: </b> <span class="span-orange"><b> SERPOLLET (devenu SERFIM.TIC) </b></span></p>
                     <p class="p-cv2 mb-4">Mise en place, balisage, tirage de câbles.</p>
 
-                    <p class="p-cv2 mb-1"><b> 2007 /2020: </b> <span class="span-orange"><b> INTERIMAIRE (Crit, Gemo, Adéquat, Sovitrat) </b></span></p>
+                    <p class="p-cv2 mb-1"><b id="b-cv"> 2007 /2020: </b> <span class="span-orange"><b> INTERIMAIRE (Crit, Gemo, Adéquat, Sovitrat) </b></span></p>
                     <p class="p-cv2 mb-1">Diverses missions : J'ai travaillé 13ans avec le même chargé d'affaires que j'ai suivi dans toute ces boites d'intérim.</p>
-                    <p class="p-cv2 mb-2"><b>Réfèrent :</b> Didier Roux <b>Tel :</b> (En attente)</p>
+                    <p class="p-cv2 mb-2"><b><span id="span-orange"> Réfèrent :</span></b><b> Didier Roux </b></p>
 
-                    <p class="p-cv2 mb-1"><b> S.N.A.A.M </b></p>
+                    <p class="p-cv2 mb-1"><b><span class="span-orange"> S.N.A.A.M </span></b></p>
                     <p class="p-cv2 mb-2">Préparateur de commandes en BTP : réceptions, contrôles de marchandises, chargements pour livraisons.</p>
 
-                    <p class="p-cv2 mb-1"><b> EIFFAGE ENERGIE </b></p>
+                    <p class="p-cv2 mb-1"><b><span class="span-orange"> EIFFAGE ENERGIE </span></b></p>
                     <p class="p-cv2 mb-2">Responsable magasinier : gestion des stocks, commandes et redistribution avec suivi du matériel donné aux ouvriers.</p>
 
-                    <p class="p-cv2 mb-1"><b> ALTRAD PLETTAC </b></p>
+                    <p class="p-cv2 mb-1"><b><span class="span-orange"> ALTRAD PLETTAC </span></b></p>
                     <p class="p-cv2 mb-2">Préparateur de commande, gestion des retours et reconditionnement du matériel.</p>
 
-                    <p class="p-cv2 mb-1"><b> 2001 /2005: </b> <span class="span-orange"><b> SHAMAN ORGANISATION SYSTEME (S.O.S) </b></span></p>
+                    <p class="p-cv2 mb-1"><b id="b-cv"> 2001 /2005: </b> <span class="span-orange"><b> SHAMAN ORGANISATION SYSTEME (S.O.S) </b></span></p>
                     <p class="p-cv2 mb-1">Artiste et associé dans un studio d’enregistrement : auteur, compositeur, interprète, concert.</p>
                     <p class="p-cv2 mb-5">Utilisation de divers logiciels (Fruity-Loops, Cubasse, Wave-Lab).</p>
                 </article>
