--- a/views/page-pf/index.html.twig
+++ b/views/page-pf/index.html.twig
@@ -11,12 +11,11 @@
                 <br />
                 <p>Bonjour, je m'appelle Christophe.</p>
                 <p>
-                    À la recherche d'une alternance.
-                    Autonome de nature, je peux travailler seul ou en groupe, étant également capable de m’adapter à un environnement que je ne connais pas.
-                    Je suis quelqu'un de très déterminé même quand je ne comprends pas, je ne lâche pas jusqu'à comprendre.
-                    Ce métier me plaît beaucoup, j'aimerais trouver une entreprise susceptible de m'accueillir
-                    pour mon évolution dans le domaine du développement d'application web afin de me perfectionner 
-                    et obtenir mon diplôme.
+                    Afin de poursuivre ma formation Concepteur, de développeur d’applications,
+                    je suis à la recherche d’une entreprise pour effectuer la prochaine année alternance et obtenir mon diplôme.
+                    Je suis méticuleux et passionné par le domaine du développement informatique.
+                    Ma capacité d’auto-formation fait de moi quelqu’un de déterminé et je serai
+                    ravi de mettre ces compétences au service de ma futur entreprise d’accueil.
                 </p>
             </article>
             <article>
