--- a/views/page-pf/projets.html.twig
+++ b/views/page-pf/projets.html.twig
@@ -18,25 +18,9 @@
 			<main id="carousel">
 				
 					<div class="item " id="div-card">
-						<img src="/assets/img/matrix.jpg" class="card-img-top" alt="/public/assets/img/frame.jpg"/>
-						<div class="card-body">
-							<p class="card-text">Création d'un petit Jeu en HTML, CSS, JS (pas de reponsive) fait en exercice à l'école Ri7 où l'on suit la formation..</p>
-							<p>
-								<a class="a-git" target="_blank" href="https://github.com/Blondin13/Exo_js_Matrix">LIEN GitHub</a>
-							</p>
-							<p>
-								<a class="a-git" target="_blank" href="/assets/projets/fiche-matrix-en-ligne.pdf">Voir fiche projet</a>
-							</p>
-							<p>
-								<a target="_blank" href="https://christophe-buire.ri7.tech/Exo_js_Matrix/" class="btn btn-dark">CLIQUER POUR JOUER</a>
-							</p>
-						</div>
-					</div>
-
-					<div class="item " id="div-card">
 						<img src="/assets/img/cv-online.jpg" class="card-img-top" alt="/public/assets/img/frame.jpg"/>
 						<div class="card-body">
-							<p class="card-text">Création d'un C.V un peut stylé en HTML, CSS et RESPONSIVE fait en exercice à l'école Ri7 où l'on suit la formation.</p>
+							<p class="card-text"><b>Création d'un C.V un peut stylé en HTML, CSS et RESPONSIVE fait en exercice à l'école Ri7 où l'on suit la formation.</b></p>
 							<p>
 								<a class="a-git" target="_blank" href="https://github.com/Blondin13/Projet-cv_2022">LIEN GitHub</a>
 							</p>
@@ -50,9 +34,25 @@
 					</div>
 
 					<div class="item " id="div-card">
+						<img src="/assets/img/drap-react.jpg" class="card-img-top" alt="/public/assets/img/frame.jpg"/>
+						<div class="card-body">
+							<p class="card-text"><b>Création d'une page REACT sur les drapeaux du monde, leur capital et population fait en auto-formation (From Scratch).</b></p>
+							<p>
+								<a class="a-git" target="_blank" href="https://github.com/Blondin13/Drapeaux-pays-react">LIEN GitHub</a>
+							</p>
+							<p>
+								<a class="a-git" target="_blank" href="/assets/projets/fiche-drapeaux.pdf">Voir fiche projet</a>
+							</p>
+							<p class= p-card-btn>
+								<a target="_blank" href="http://christophe-buire.ri7.tech:8080/" class="btn btn-dark">Cliquez pour jouer</a>
+							</p>
+						</div>
+					</div>
+
+					<div class="item " id="div-card">
 						<img src="/assets/img/morpion-jeu.jpg" class="card-img-top" alt="/public/assets/img/frame.jpg"/>
 						<div class="card-body">
-							<p class="card-text">Création du jeu morpion en HTML, CSS, RESPONSIVE, J.S et NODE.JS fait en exercice à l'école Ri7.</p>
+							<p class="card-text"><b>Création du jeu morpion en HTML, CSS, RESPONSIVE, JavaScript fait en exercice à l'école Ri7.</b></p>
 							<p>
 								<a class="a-git" target="_blank" href="https://github.com/Blondin13/Morpion_Ri7">LIEN GitHub</a>
 							</p>
@@ -68,7 +68,7 @@
 					<div class="item " id="div-card">
 						<img src="/assets/img/mario-figma.jpg" class="card-img-top" alt="/public/assets/img/frame.jpg"/>
 						<div class="card-body">
-							<p class="card-text">Création d'un "pseudo" site HTML, CSS, RESPONSIVE, par rapport à une maquette que l'on nous a créé sur Figma.</p>
+							<p class="card-text"><b>Création d'un "pseudo" site HTML, CSS, RESPONSIVE, par rapport à une maquette que l'on nous a créé sur Figma.</b></p>
 							<p>
 								<a class="a-git" target="_blank" href="https://github.com/Blondin13/Integration_mario_figma">LIEN GitHub</a>
 							</p>
@@ -84,7 +84,7 @@
 					<div class="item " id="div-card">
 						<img src="/assets/img/puissance-4-jeu.jpg" class="card-img-top" alt="/public/assets/img/frame.jpg"/>
 						<div class="card-body">
-							<p class="card-text">Création du jeu Puissance 4 en HTML, CSS, RESPONSIVE, J.S et NODE.JS fait en exercice à l'école Ri7.</p>
+							<p class="card-text"><b>Création du jeu Puissance 4 en HTML, CSS, RESPONSIVE, JavaScript fait en exercice à l'école Ri7.</b></p>
 							<p>
 								<a class="a-git" target="_blank" href="https://github.com/Blondin13/Puissance-4.git">LIEN GitHub</a>
 							</p>
@@ -100,7 +100,7 @@
 					<div class="item " id="div-card">
 						<img src="/assets/img/puissance-4-gravity-jeu.jpg" class="card-img-top" alt="/public/assets/img/frame.jpg"/>
 						<div class="card-body">
-							<p class="card-text">Création du jeu Puissance 4 en HTML, CSS, RESPONSIVE, J.S et node.js, petit plus du précedent la gravité.</p>
+							<p class="card-text"><b>Création du jeu Puissance 4 en HTML, CSS, JavaScript, petit plus du précedent la gravité et son des jetons.</b></p>
 							<p>
 								<a class="a-git" target="_blank" href="https://github.com/Blondin13/Puissance-4-Gravity.git">LIEN GitHub</a>
 							</p>
@@ -116,7 +116,7 @@
 					<div class="item " id="div-card">
 						<img src="/assets/img/pokedex.jpg" class="card-img-top" alt="/public/assets/img/frame.jpg"/>
 						<div class="card-body">
-							<p class="card-text">Création pokedex HTML, CSS, RESPONSIVE, MONGO.DB JS et NODE.JS fait en exercice à l'école Ri7.</p>
+							<p class="card-text"><b>Création pokedex HTML, CSS, RESPONSIVE, MONGO.DB JS et NODE.JS fait en exercice à l'école Ri7.</b></p>
 							<p>
 								<a class="a-git" target="_blank" href="https://github.com/Blondin13/Pokemon_pokedex">LIEN GitHub</a>
 							</p>
