--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -23,7 +23,20 @@ a {
     font-family: king;
     font-size: 1.5rem !important;
     letter-spacing: 2px;
-    color: white;
+    color: white !important;
+    
+}
+
+.navbar a:hover {
+    font-family: king;
+    color: #ffd54e !important;
+    text-shadow: 1px 1px 2px rgb(171, 169, 169), 0 0 1em rgb(75, 72, 72), 0 0 0.2em rgb(75, 72, 72);
+}
+
+a.active {
+    font-family: king;
+    color: #ffd54e !important;
+    text-shadow: 1px 1px 2px rgb(171, 169, 169), rgb(75, 72, 72), 0 0 0.2em rgb(75, 72, 72) !important;
 }
 
 .navbar li {
@@ -47,7 +60,7 @@ a {
 
 h1 {
     font-family: king;
-    color: rgb(223, 200, 0);
+    color: #ffd54e;
     text-shadow: 1px 1px 3px black;
 }
 
@@ -80,15 +93,22 @@ h1 {
 
 .card-img-top {
     border: solid 1px black;
+    box-shadow: 1px 1px 1px #010101;
 }
 
 .card-body {
     background-color: #e2e2e2;
     border: solid 1px black;
+    box-shadow: 1px 1px 1px #010101;
+}
+
+.card-text{
+    text-shadow: 1px 1px 3px rgb(255, 255, 255) !important;
 }
 
 .a-git {
-    color: black;
+    color: black !important;
+    text-shadow: 1px 1px 3px rgb(255, 255, 255) !important;
 }
 
 /*-------------------------CAROUSEL--------------------------*/
@@ -204,6 +224,36 @@ input:nth-of-type(7):checked ~ main#carousel {
     --position: 7;
 }
 
+input[type="radio"]:after {
+    width: 20px;
+    height: 20px;
+    border-radius: 15px;
+    top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: rgb(174, 174, 174);
+    content: "";
+    display: inline-block;
+    visibility: visible;
+    border: 2px solid rgb(82, 81, 81);
+    box-shadow: 1px 1px 1px #484848;
+}
+
+input[type="radio"]:checked:after {
+    width: 20px;
+    height: 20px;
+    border-radius: 15px;
+    top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: #ffd54e;
+    content: "";
+    display: inline-block;
+    visibility: visible;
+    border: 2px solid black;
+    box-shadow: 1px 2px 3px #ffffff, 0 0 1em #ffd54e, 0 0 0.2em #ffd54e;
+}
+
 /*----------------------------------------------CV--------------------------------------------------*/
 .main-cv {
     padding-top: 60px;
@@ -212,14 +262,20 @@ input:nth-of-type(7):checked ~ main#carousel {
     padding-bottom: 60px;
 }
 
+.photo-moi{
+    box-shadow: 2px 2px 3px black;
+}
+
 .text-nom {
     font-family: king;
-    font-size: 1.7rem;
+    font-size: 1.8rem;
+    text-shadow: 1px 1px 2px white;
 }
 
 .text-nom2 {
     font-family: king;
-    font-size: 1.7rem;
+    font-size: 1.8rem;
+    text-shadow: 1px 1px 2px white;
 }
 
 .h1-cv {
@@ -228,10 +284,12 @@ input:nth-of-type(7):checked ~ main#carousel {
     font-size: 5rem;
     font-family: king;
     letter-spacing: 3px;
+    text-shadow: 1px 2px 3px white;
 }
 
 .span-orange {
-    color: #ea9215;
+    color: #ff9500;
+    text-shadow: 1px 1px 2px black !important;
 }
 
 .article-profil {
@@ -242,11 +300,28 @@ input:nth-of-type(7):checked ~ main#carousel {
 p {
     font-size: 1.3rem;
     font-family: rosa;
+    letter-spacing: 1px;
+    text-shadow: 1px 1px 2px black;
+}
+
+.p-cv2 {
+    color: white;
+    text-shadow: 1px 2px 3px black!important;
+}
+
+#b-cv {
+    color: black !important;
+    text-shadow: 1px 1px 2px white !important;
 }
 
 .section-cv {
-    background-color: #e2e2e2;
+    background-color: #999999;
 }
+
+/* section{
+    border: solid 1px rgb(58, 57, 57);
+    box-shadow: 1px 2px 3px black !important;
+} */
 
 /*-----------------------BOUTON-CV---------------------------*/
 .div-btn {
@@ -289,7 +364,7 @@ p {
 
 form {
     border: solid 1px black;
-    background-color: rgb(105, 105, 105);
+    background-color: #999999;
     width: 600px;
     height: 450px;
 }
