modif texte Pf CB

--- a/views/page-pf/projets.html.twig
+++ b/views/page-pf/projets.html.twig
@@ -36,7 +36,7 @@
 					<div class="item " id="div-card">
 						<img src="/assets/img/drap-react.jpg" class="card-img-top" alt="/public/assets/img/frame.jpg"/>
 						<div class="card-body">
-							<p class="card-text"><b>Création d'une page REACT sur les drapeaux du monde, leur capital et population fait en auto-formation (From Scratch).</b></p>
+							<p class="card-text"><b>Création d'une page REACT sur les drapeaux du monde, leur capital et population, en auto-formation(From Scratch).</b></p>
 							<p>
 								<a class="a-git" target="_blank" href="https://github.com/Blondin13/Drapeaux-pays-react">LIEN GitHub</a>
 							</p>
