--- a/public/assets/stylesheets/responsive.css
+++ b/public/assets/stylesheets/responsive.css
@@ -1,3 +1,63 @@
+/*------------------------------------1680PX----------------------------------------*/
+@media screen and (max-width: 1680px){
+    /*----------------------------------INDEX---------------------------------------*/
+    .main-index {
+        margin-top: 80px;
+    }
+    /*---------------------------------PROJETS--------------------------------------*/
+    .main-projets {
+        margin-top: 40px;
+    }
+
+    /*---------------------------------CONTACT--------------------------------------*/
+    .main-contact{
+        margin-top: 0;
+    }
+
+    .img-contact {
+        width: 600px;
+    }
+
+    form {
+        margin-top: 0;
+    }
+}
+
+
+
+
+/*------------------------------------1420PX----------------------------------------*/
+@media screen and (max-width: 1420px){
+    /*----------------------------------INDEX---------------------------------------*/
+    .main-index {
+        margin-top: 80px;
+    }
+    /*---------------------------------PROJETS--------------------------------------*/
+    .main-projets {
+        margin-top: 0px;
+    }
+
+    /*---------------------------------CONTACT--------------------------------------*/
+    .main-contact{
+        margin-top: 0;
+    }
+
+    .article-contact{
+        padding: 0px;
+    }
+
+    .img-contact {
+        width: 500px;
+    }
+
+    form {
+        margin-top: 0;
+    }
+}
+
+
+
+
 /*------------------------------------1280PX--------------------------------------------*/
 @media screen and (max-width: 1280px){
     /*------------------------------------NAV-------------------------------------------*/
@@ -34,9 +94,12 @@
     }
 }
 
-/*------------------------------------1200PX-------------------------------------------*/
+
+   
+
+/*------------------------------------1200PX----------------------------------------*/
 @media screen and (max-width: 1200px){
-    /*------------------------------------INDEX----------------------------------------*/
+    /*----------------------------------INDEX---------------------------------------*/
     .main-index{
         margin-top: 100px;
         flex-direction: column-reverse;
@@ -51,7 +114,7 @@
         margin: 0;   
     }
 
-    /*----------------------------------PROJETS---------------------------------------*/
+    /*---------------------------------PROJETS--------------------------------------*/
     .main-projets{
         margin-top: 50px;
     }
@@ -71,7 +134,7 @@
         margin-top: 20px;
     }
 
-    /*---------------------------------CAROUSEL--------------------------------------*/     
+    /*---------------------------------CAROUSEL-------------------------------------*/     
     main#carousel{
         width: 165% !important;
         margin-left: 95%;
@@ -101,6 +164,9 @@
     }
 }
 
+
+
+
 /*------------------------------------1140PX----------------------------------------*/
 @media screen and (max-width: 1140px){
     /*----------------------------------CV------------------------------------------*/
@@ -113,6 +179,9 @@
     }
 
 }
+
+
+
 
 /*------------------------------------1090PX----------------------------------------*/
 @media screen and (max-width: 1050px){
@@ -154,6 +223,9 @@
       margin-left: 6px;
     }
 }
+
+
+
 
 /*-----------------------------------991PX------------------------------------------*/
 @media screen and (max-width: 991px){
@@ -218,6 +290,9 @@
     }
 }
 
+
+
+
 /*-----------------------------------880PX------------------------------------------*/
 @media screen and (max-width: 880px){
     /*----------------------------------PROJETS-------------------------------------*/
@@ -241,6 +316,9 @@
         font-size: 3rem;
     }
 }
+
+
+
 
 /*-----------------------------------830PX------------------------------------------*/
 @media screen and (max-width: 830px){
@@ -270,6 +348,9 @@
     }
     
 }
+
+
+
 
 /*-----------------------------------790PX------------------------------------------*/
 @media screen and (max-width: 790px){
@@ -307,6 +388,9 @@
     }
 }
 
+
+
+
 /*-----------------------------------690PX------------------------------------------*/
 @media screen and (max-width: 690px){
     /*-----------------------------------PROJETS------------------------------------*/
@@ -336,6 +420,9 @@
     } 
 }
 
+
+
+
 /*-----------------------------------630PX------------------------------------------*/
 @media screen and (max-width: 630px){
     /*-----------------------------------PROJETS------------------------------------*/
@@ -358,6 +445,9 @@
         height: 600px;  
     }
 }
+
+
+
 
 /*-----------------------------------580PX------------------------------------------*/
 @media screen and (max-width: 580px){
@@ -412,6 +502,9 @@
     }
 }
 
+
+
+
 /*-----------------------------------470PX------------------------------------------*/
 @media screen and (max-width: 470px){
     /*----------------------------------CV------------------------------------------*/
@@ -423,6 +516,9 @@
         font-size: 0.9rem !important;
     }
 }
+
+
+
 
 /*-----------------------------------445PX------------------------------------------*/
 @media screen and (max-width: 445px){
@@ -466,6 +562,9 @@
     }
     
 }
+
+
+
 
 /*-----------------------------------420PX------------------------------------------*/
 @media screen and (max-width: 420px){
@@ -540,6 +639,9 @@
     
 }
 
+
+
+
 /*-----------------------------------395PX------------------------------------------*/
 @media screen and (max-width: 395px){
     /*-----------------------------------INDEX--------------------------------------*/
@@ -548,7 +650,7 @@
     }
     /*----------------------------------PROJETS-------------------------------------*/
     .main-projets{
-        margin-top: 80px;
+        margin-top: 0px;
     }
 
     .article-projets input{
@@ -629,6 +731,9 @@
     }
 
 }
+
+
+
 
 /*-----------------------------------340PX------------------------------------------*/
 @media screen and (max-width: 340px){
