derniere modif mars 2023

--- a/views/nav-bar/nav-bar.html.twig
+++ b/views/nav-bar/nav-bar.html.twig
@@ -23,7 +23,7 @@
 					<a class="nav-link {% if active == '/projets' %}active{% endif %}" href="/projets">PROJETS</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link {% if active == '/cv' %}active{% endif %}" href="/cv">CURRICULUM-VITEA</a>
+					<a class="nav-link {% if active == '/cv' %}active{% endif %}" href="/cv">CURRICULUM-VITAE</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link {% if active == '/contact' %}active{% endif %}" href="/contact">CONTACT</a>
