--- a/views/page-pf/index.html.twig
+++ b/views/page-pf/index.html.twig
@@ -9,8 +9,8 @@
             <article class="article-index">
                 <h1>MON PORTFOLIO</h1>
                 <br />
-                <p>Bonjour, je m'appelle Christophe.</p>
-                <p>
+                <p class="p-index">Bonjour, je m'appelle Christophe.</p>
+                <p class="p-index">
                     Afin de poursuivre ma formation Concepteur, de développeur d’applications,
                     je suis à la recherche d’une entreprise pour effectuer la prochaine année alternance et obtenir mon diplôme.
                     Je suis méticuleux et passionné par le domaine du développement informatique.
