--- a/public/assets/stylesheets/responsive.css
+++ b/public/assets/stylesheets/responsive.css
@@ -57,6 +57,52 @@
 
 
 
+/*------------------------------------1340PX--------------------------------------------*/
+@media screen and (max-width: 1340px){
+    /*----------------------------------INDEX---------------------------------------*/
+    .main-index {
+        display: flex;
+        justify-content: space-around;
+        margin-top: 40px;
+    }
+    
+    .article-index {
+        margin-top: 60px;
+    }
+    
+    .p-index{
+        font-size: 18px;
+    }
+    
+    .img-index {
+        width: 700px;
+        height: 500px;
+    }
+
+    /*----------------------------------PROJETS-----------------------------------------*/
+    main#carousel {
+        width: 120%;
+    }
+
+    /*---------------------------------CONTACT--------------------------------------*/
+
+    .img-contact {
+        width: 420px;
+    }
+
+    form {
+        width: 550px;
+        height: 400px;
+    }
+
+    textarea {
+        height: 180px;
+    }
+
+}
+
+
+
 
 /*------------------------------------1280PX--------------------------------------------*/
 @media screen and (max-width: 1280px){
