--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -94,12 +94,14 @@ h1 {
 .card-img-top {
     border: solid 1px black;
     box-shadow: 1px 1px 1px #010101;
+    box-shadow: 1px 2px 3px white, 0 0 1em grey, 0 0 0.2em rgb(96, 96, 96);
 }
 
 .card-body {
     background-color: #e2e2e2;
     border: solid 1px black;
     box-shadow: 1px 1px 1px #010101;
+    box-shadow: 1px 2px 3px white, 0 0 1em grey, 0 0 0.2em rgb(96, 96, 96);
 }
 
 .card-text{
